# app

./: Cargo.toml  FUNCTIONS.md  LICENSE  Modelfile  README.md
src/: main.rs
src/app/: assistant_app.rs  chat.rs  command_log.rs  config.rs  constants.rs  desktop.rs  installer.rs  mod.rs
src/app/ai/: local_provider.rs  mod.rs  tools.rs
src/app/commands/: base.rs  guide.rs  mod.rs  package.rs  system.rs
src/app/guides/: mod.rs
src/app/ui/: dialogs.rs  mod.rs  widgets.rs
