[package]
name = "alfons-assistant"
version = "0.0.5"
edition = "2021"
license = "GPL-3.0"

[dependencies]
eframe = "0.26"
egui = "0.26"
chrono = "0.4"
confy = "0.6"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
regex = "1.10"
dirs = "5.0"